Ensure top row visible when headers get fixed to top

--- a/processing_frontend/app/assets/stylesheets/components/_purchase_orders_table.scss
+++ b/processing_frontend/app/assets/stylesheets/components/_purchase_orders_table.scss
@@ -7,6 +7,10 @@
 }
 
 .purchase_orders_table--sticky {
+  .table {
+    margin-top: 160px;
+  }
+
   thead {
     background: white;
     display: block;
